[FIX] jDriveClonr-2: Various code improvements